# AqyDisp

./: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
OpenSSL/: ca_cert.pem  ca_key.pem
main/: CMakeLists.txt  Kconfig.projbuild  config_app.c  config_app.h  idf_component.yml  main.c
main/GUI/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
main/GUI/fonts/: ui_font_KazakhFontNovo36.c  ui_font_KazakhFontNovoNumbers140.c
main/GUI/images/: ui_img_1272477160.c  ui_img_338993590.c  ui_img_473763830.c  ui_img_996158111.c  ui_img_chart_png.c  ui_img_logo_png.c  ui_img_round_back_png.c  ui_img_settings_png.c  ui_img_wait_png.c
main/GUI/screens/: ui_Screen1.c  ui_Screen1.h  ui_ServiceScreen.c  ui_ServiceScreen.h  ui_graphScreen.c  ui_graphScreen.h  ui_homeScreen.c  ui_homeScreen.h  ui_instructionsScreen.c  ui_instructionsScreen.h  ui_logoScreen.c  ui_logoScreen.h  ui_sensorChooseScreen.c  ui_sensorChooseScreen.h  ui_settingsScreen.c  ui_settingsScreen.h  ui_wifiConnectScreen.c  ui_wifiConnectScreen.h
main/JSON/: fetchData.c  fetchData.h
main/LVGL_init/: aqylab.c  aqylab.h
main/OTA/: ota.c  ota.h  simple_ota_example.code-workspace
main/Sensors/: i2c_shared.h  sensors.c  sensors.h
main/WIFI/: captive_portal.c  captive_portal.h  direct_wifi.c  direct_wifi.h  wifi.c  wifi.h
